--- a/virtMan.page
+++ b/virtMan.page
@@ -75,9 +75,9 @@ if ($virtMan_curversion == "")
 			</div>
 		<?else:?>
 			<div style="position:relative;float:left;width:100%;text-align:center;margin-bottom:24px">
-				<form name="virtMan_start" method="POST" action="/update.htm" target="progressFrame">
-					<input type="hidden" name="cmd" value="/etc/rc.d/rc.libvirt start  " />
-					<input type="submit" name="runCmd" value="Start">
+				<form name="virtMan_start" method="POST" action="/update.php" target="progressFrame">
+					<input type="hidden" name="#command" value="/etc/rc.d/rc.libvirt start  " />
+					<input type="submit" value="Start">
 				</form>
 			</div>
 		<?endif;?>
